create login and logout pages

--- a/inovation/templates/signup.html
+++ b/inovation/templates/signup.html
@@ -76,7 +76,7 @@
     </div>
   
     <p>職種を入力してください(任意)</p>
-    <select name="works">
+    <select name='works'　class="postform">
       <option></option>
       <option>エンジニア</option>
       <option>デザイナー</option>
