--- a/inovation/templates/registration/logged_out.html
+++ b/inovation/templates/registration/logged_out.html
@@ -5,7 +5,7 @@
 {% endblock customcss %}
  
 {% block content %}
-<h1>Logged Out</h1>
+<h1>ログアウト完了</h1>
 <p>本日はこのWebサイトをご利用いただきありがとうございます。</p>
-<p><a href="{% url 'login' %}">Log in again</a></p>
+<p><a href="{% url 'login' %}">ログインし直す</a></p>
 {% endblock %}
