--- a/inovation/templates/registration/login.html
+++ b/inovation/templates/registration/login.html
@@ -34,7 +34,7 @@
 </tr>
 </table>
 <div class="container">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">ログイン</button>
 </div>
 </form>
 {% endblock %}
