--- a/inovation/templates/signup.html
+++ b/inovation/templates/signup.html
@@ -102,7 +102,7 @@
     </select>
     <div class="checkbox mb-4">
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">新規会員登録</button>
   </div>
 </form>
 {% endblock content %}
