--- a/inovation/templates/registration/login.html
+++ b/inovation/templates/registration/login.html
@@ -17,7 +17,7 @@
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p style="font-size: 20px;">このページを表示するには、ログインしてください。</p>
     {% endif %}
 {% endif %}
  
