--- a/inovation/templates/ideas_list.html
+++ b/inovation/templates/ideas_list.html
@@ -5,14 +5,15 @@
 {% endblock customcss %}
 
 {% block content %}
-<div class="checks">
+<div class="search">
     <form action="" method="get">
         <input name="query" value="{{ request.GET.query }}" type="text">
         <button type="submit">検索する</button>
     </form>
     <a href="../ideas_list" class="back">一覧画面に戻る</a>
-    <a href="../accounts/logout">ログアウト</a>
 </div>
+<a href="../my_page">マイページ</a>
+<a href="../accounts/logout">ログアウト</a>
 
 <div class="mt-4"></div>
 {% for idea in object_list %}
