--- a/inovation/templates/main_list.html
+++ b/inovation/templates/main_list.html
@@ -5,25 +5,40 @@
 {% endblock customcss %}
 
 {% block content %}
-<div class="mt-4"></div>
-{{main_title}}
-<a href="{% url 'opinion' pk=pk2 %}">新規投稿</a>
-<a href="../accounts/logout">ログアウト</a>
-<a href="../my_page">マイページ</a>
-{% for idea in page_obj %}
-<div class="alert alert-warning container rounded-pill" role="alert">
-    <a href="{% url 'detail' idea.author %}">名前：{{idea.author}}</a>
-    <p>タイトル：{{idea.title}}</p>
-    <p>内容：{{idea.content}}</p>
-    <a href="{% url 'good' idea.pk %}" class="btn btn-primary" role="button" aria-pressed="true">いいね：{{idea.good}}</a>
+<div class="bg">
+    <div class="box">
+        <div class="header">
+            <div class="title left">
+                CrossInnovation
+            </div>
+            <div class="right">
+                <a href="{% url 'opinion' pk=pk2 %}">新規投稿</a>
+                <a href="../ideas_list">一覧画面</a>
+                <a href="../my_page">マイページ</a>
+                <a href="../accounts/logout">ログアウト</a>
+            </div>
+        </div>
+        <h1>{{main_title}} × 〇〇</h1>
+        {% for idea in page_obj %}
+        <div class="post">
+            <a href="{% url 'detail' idea.author %}">投稿者：{{idea.author}}</a>
+            <p style="margin-top: 16px;">組み合わせる分野：{{idea.title}}</p>
+            <p>内容</p>
+            <p class="content">{{idea.content}}</p>
+            <a href="{% url 'good' idea.pk %}" class="btn btn-primary" role="button" aria-pressed="true">いいね：{{idea.good}}</a>
+        </div>
+        {% endfor %}
+        <div class="col-6 offset-3 justify-content-center">
+        {% if is_paginated %}
+        {% include 'pagination.html' %}
+        {% endif %}
+        </div>
+        <footer>
+            <p>Copyright © 2020 CrossInnovation Inc. All Rights Reserved.</p>
+        </footer>
+    </div>
 </div>
 
-{% endfor %}
-<div class="col-6 offset-3 justify-content-center">
-    {% if is_paginated %}
-        {% include 'pagination.html' %}
-    {% endif %}
-</div>
 
 {% endblock content%}
 
