--- a/inovation/templates/my_page.html
+++ b/inovation/templates/my_page.html
@@ -1,33 +1,47 @@
 {% extends "base.html" %}
+{% load static %}
+{% block customcss %}
+<link rel="stylesheet" type="text/css" href="{% static 'my_page.css' %}">
+{% endblock customcss %}
  
 {% block content %}
- 
-<a href="../accounts/logout">ログアウト</a>
-<a href="../ideas_list">一覧画面</a>
-
-<div class="profile">
-    <h3>プロフィール</h3>
-    <p>名前：{{userinfo.user.username}}</p>
-    <p>出身地：{{userinfo.prefectures}}</p>
-    <p>職種：{{userinfo.works}}</p>
-    <a href="{% url 'edit' pk=userinfo.pk %}">プロフィール編集</a>
-</div>
-
-<h3>投稿一覧</h3>
-{% for idea in page_obj %}
-<a href="{% url 'idea_edit' pk=idea.pk %}">
-    <div class="my_idea mb-4">
-        <p>ジャンル：{{idea.idea_list.genre}}</p>
-        <p>タイトル：{{idea.title}}</p>
-        <p>内容：{{idea.content}}</p>
-        <p>いいね数{{idea.good}}</p>
+<div class="bg">
+    <div class="box">
+        <div class="header">
+            <div class="title left">
+                CrossInnovation
+            </div>
+            <div class="right">
+                <a href="{% url 'edit' pk=userinfo.pk %}" class="pro">プロフィール編集</a>
+                <a href="../ideas_list">一覧画面</a>
+                <a href="../accounts/logout">ログアウト</a>
+            </div>
+        </div>
+        <div class="profile">
+            <h2>プロフィール</h2>
+            <p>名前：{{userinfo.user.username}}</p>
+            <p>現住地：{{userinfo.prefectures}}</p>
+            <p>職種：{{userinfo.works}}</p>
+        </div>
+        <div class="post">
+            <h2>投稿一覧</h2>
+            {% for idea in page_obj %}
+            <a href="{% url 'idea_edit' pk=idea.pk %}">
+                <p>メインジャンル：{{idea.idea_list.genre}}</p>
+                <p>組み合わせる分野：{{idea.title}}</p>
+                <p>内容：{{idea.content}}</p>
+                <p>いいね数：{{idea.good}}</p>
+            </a>
+            {% endfor %}
+            <div class="col-6 offset-3 justify-content-center">
+                {% if is_paginated %}
+                {% include 'pagination.html' %}
+                {% endif %}
+            </div>
+        </div>
+        <footer>
+            <p>Copyright © 2020 CrossInnovation Inc. All Rights Reserved.</p>
+        </footer>
     </div>
-</a>
-{% endfor %}
-<div class="col-6 offset-3 justify-content-center">
-    {% if is_paginated %}
-        {% include 'pagination.html' %}
-    {% endif %}
 </div>
-
 {% endblock content %}
