--- a/inovation/templates/registration/logged_out.html
+++ b/inovation/templates/registration/logged_out.html
@@ -5,7 +5,25 @@
 {% endblock customcss %}
  
 {% block content %}
-<h1>ログアウト完了</h1>
-<p>本日はこのWebサイトをご利用いただきありがとうございます。</p>
-<p><a href="{% url 'login' %}">ログインし直す</a></p>
+<div class="bg">
+    <div class="box">
+        <div class="header">
+            <div class="title left">
+                CrossInnovation
+            </div>
+            <div class="right">
+                <a href="../../">ホーム</a>
+                <a href="{% url 'login' %}">再ログイン</a>
+            </div>
+        </div>
+        <h1>ログアウト完了</h1>
+        <p>本日はこのWebサイトをご利用いただきありがとうございました。</p>
+        <p>またのご利用をお持ちしております。</p>
+        <div class="login"><a href="{% url 'login' %}">再ログイン</a></div>
+        <footer>
+            <p>Copyright © 2020 CrossInnovation Inc. All Rights Reserved.</p>
+        </footer>
+    </div>
+</div>
+
 {% endblock %}
