--- a/inovation/templates/registration/login.html
+++ b/inovation/templates/registration/login.html
@@ -6,35 +6,58 @@
 {% endblock customcss %}
  
 {% block content %}
-<div class="checkbox mb-4">
+<div class="bg">
+    <div class="box">
+        <div class="header">
+            <div class="title left">
+                CrossInnovation
+            </div>
+            <div class="right">
+              <a href="/">ホーム</a>
+              <a href="../../signup">新規会員登録</a>
+            </div>
+        </div>
+        <div class="checkbox mb-4">
+        </div>
+        <h1 class="font-weight-normal">ログイン</h1>
+        {% if form.errors %}
+        <p style="color:red; font-size:20px; text-align: center;">ユーザー名とパスワードが一致しませんでした。もう一度やり直してください。</p>
+        {% endif %}
+        {% if next %}
+            {% if user.is_authenticated %}
+            <p style="color:red; font-size:20px; text-align: center;">あなたのアカウントはこのページにアクセスできません。</p>
+            <p style="color:red; font-size:20px; text-align: center;">続行するには、アクセス権のあるアカウントでログインしてください。</p>
+            {% else %}
+            <p style="color:red; font-size:20px; text-align: center;">このページを表示するには、ログインしてください。</p>
+            {% endif %}
+        {% endif %}
+         
+        <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table align="center">
+        <tr>
+            <td>{{ form.username.label_tag }}</td>
+            <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password.label_tag }}</td>
+            <td>{{ form.password }}</td>
+        </tr>
+        </table>
+        <div class="submit-area">
+            <input type="submit" name="submit" class="submit" value="ログイン">
+        </div>
+        </form>
+        <div class="guest-box">
+            <div class="guest">
+                <p>ゲストログインは下記の内容を入力してください。</p>
+                <p>ユーザーネーム「guest」</p>    
+                <p>パスワード「guest1」</p>  
+            </div>
+        </div>
+        <footer>
+            <p style="font-size: 20px;">Copyright © 2020 CrossInovation Inc. All Rights Reserved.</p>
+        </footer>
+    </div>
 </div>
-{% if form.errors %}
-<p style="color:red; font-size:20px ;">ユーザー名とパスワードが一致しませんでした。もう一度やり直してください。</p>
-{% endif %}
- 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p style="font-size: 20px;">このページを表示するには、ログインしてください。</p>
-    {% endif %}
-{% endif %}
- 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table align="center">
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-<div class="container">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">ログイン</button>
-</div>
-</form>
 {% endblock %}
